[MDX-2] Add manifold preprocessor conditional statements where necessary